<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
    <variable
            name="viewModel"
            type="com.extra.cyclyx.ui.pengenalan.registrasi.RegistrasiViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_5"
            tools:context=".ui.pengenalan.registrasi.RegistrasiDataDiriFragment">

        <LinearLayout
                android:id="@+id/title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_17sdp"
                android:paddingRight="@dimen/_17sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    style="@style/TextViewTitle"
                    android:text="@string/txt_buat" />

            <TextView
                    style="@style/TextViewTitle.Blue"
                    android:text="@string/txt_akun" />

            <TextView
                    style="@style/TextViewSubTitle"
                    android:text="@string/txt_lengkapi_data_diri_anda" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/form_data_diri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_60ssp"
                android:paddingRight="@dimen/_60ssp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_layout"
                app:layout_constraintBottom_toTopOf="@id/relativeBack">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/nama_depan"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="@dimen/_5sdp"/>
            <EditText
                    android:id="@+id/edt_nama_depan"
                    style="@style/edit_text"
                    android:hint="@string/nama_depan" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/nama_belakang"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="@dimen/_5sdp"/>
            <EditText
                    android:id="@+id/edt_nama_belakang"
                    style="@style/edit_text"
                    android:hint="@string/nama_belakang" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/tanggal_lahir"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="@dimen/_5sdp"/>
            <EditText
                    android:id="@+id/edt_thn_lahir"
                    style="@style/edit_text"
                    android:inputType="numberDecimal"
                    android:hint="Tahun Lahir" />

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_12sdp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:text="@string/berat_badan"
                        android:layout_alignParentTop="true"
                        android:id="@+id/tvTBerat"
                        android:layout_marginBottom="@dimen/_5sdp"/>
                <EditText
                        android:layout_below="@id/tvTBerat"
                        android:id="@+id/edt_berat"
                        style="@style/edit_text"
                        android:layout_width="@dimen/_150sdp"
                        android:inputType="numberDecimal"
                        android:hint="@string/berat_badan"
                        android:layout_centerVertical="true"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Kg"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:fontFamily="@font/exo2_regular"
                        style="@style/CardView"
                        android:layout_toRightOf="@id/edt_berat"
                        android:layout_centerVertical="true"/>

            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:text="@string/tinggi_badan"
                        android:layout_alignParentTop="true"
                        android:id="@+id/tvTTinggi"
                        android:layout_marginBottom="@dimen/_5sdp"/>
                <EditText
                        android:layout_below="@id/tvTTinggi"
                        android:id="@+id/edt_tinggi"
                        style="@style/edit_text"
                        android:inputType="numberDecimal"
                        android:hint="@string/tinggi_badan"
                        android:layout_centerVertical="true"
                        android:layout_width="@dimen/_150sdp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cm"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:fontFamily="@font/exo2_regular"
                        style="@style/CardView"
                        android:layout_toRightOf="@id/edt_tinggi"
                        android:layout_centerVertical="true"/>

            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
                android:id="@+id/relativeBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

            <Button
                    android:id="@+id/btnBack"
                    style="@style/BackButton"
                    android:layout_alignParentStart="true"
                    android:text="@string/txt_kembali" />

            <Button
                    android:id="@+id/btnNext"
                    style="@style/NextButton"
                    android:layout_alignParentEnd="true"
                    android:text="@string/txt_selanjutnya" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>