<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">

    <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_22sdp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="Create"
                android:textSize="40sp" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="Account"
                android:textColor="@color/colorAccent"
                android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_40ssp"
            android:paddingRight="@dimen/_40ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_layout">

        <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/rounded_edit_text"
                android:fontFamily="@font/roboto_thin"
                android:hint="@string/email"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/colorPrimaryDark" />

        <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/rounded_edit_text"
                android:fontFamily="@font/roboto_thin"
                android:hint="@string/username"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/colorPrimaryDark" />

        <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/rounded_edit_text"
                android:fontFamily="@font/roboto_thin"
                android:hint="@string/password"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/colorPrimaryDark" />

        <EditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/rounded_edit_text"
                android:fontFamily="@font/roboto_thin"
                android:hint="@string/confirm_password"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/colorPrimaryDark" />

        <Button
                android:id="@+id/btn_signUp"
                android:layout_width="175dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/rounded_btn"
                android:fontFamily="@font/roboto_bold"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="Next"
                android:textColor="@color/whiteText" />

        <Button
                android:id="@+id/showdata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <TextView
                android:id="@+id/infoTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp" />
    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="Terms Of Service"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>