<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:mapbox="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewModel"
                type="com.extra.cyclyx.ui.hasilBersepeda.HasilBersepedaViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.mapbox.mapboxsdk.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                mapbox:mapbox_cameraZoom="18" />

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp">

                <LinearLayout

                        android:id="@+id/linearBersepeda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:text="Hasil "
                            android:textColor="@color/font_bold_purple"
                            android:textSize="@dimen/_20ssp" />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:text="bersepeda"
                            android:textColor="@color/font_light_blue"
                            android:textSize="@dimen/_20ssp" />
                </LinearLayout>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="anda"
                        android:textColor="@color/font_bold_purple"
                        android:textSize="@dimen/_20ssp" />

                <androidx.core.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        <androidx.cardview.widget.CardView style="@style/cardSetting_hasil">

                            <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:padding="@dimen/_10sdp">

                                <TextView
                                        style="@style/card_font_left"
                                        android:text="@string/txt_duration" />

                                <TextView
                                        android:id="@+id/tvHasilDurasi"
                                        style="@style/card_font_right"
                                        android:text="00:29:30" />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView style="@style/cardSetting_hasil">

                            <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:padding="@dimen/_10sdp">

                                <TextView
                                        style="@style/card_font_left"
                                        android:text="@string/txt_jarak" />

                                <TextView
                                        android:id="@+id/tvHasilJarak"
                                        style="@style/card_font_right"
                                        android:text="6.16 Km" />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView style="@style/cardSetting_hasil">

                            <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:padding="@dimen/_10sdp">

                                <TextView
                                        style="@style/card_font_left"
                                        android:text="@string/txt_kecepatan" />

                                <TextView
                                        android:id="@+id/tvHasiKecepatan"
                                        style="@style/card_font_right"
                                        android:text="100 KM/H" />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView style="@style/cardSetting_hasil">

                            <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:padding="@dimen/_10sdp">

                                <TextView
                                        style="@style/card_font_left"
                                        android:text="@string/txt_kalori" />

                                <TextView
                                        android:id="@+id/tvHasilKalori"
                                        style="@style/card_font_right"
                                        android:text="1200kcal" />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView style="@style/cardSetting_hasil">

                            <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:padding="@dimen/_10sdp">

                                <TextView
                                        style="@style/card_font_left"
                                        android:text="@string/txt_elevasi" />

                                <TextView
                                        android:id="@+id/tvHasilElevasi"
                                        style="@style/card_font_right"
                                        android:text="4 M" />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView style="@style/cardSetting_hasil">

                            <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:padding="@dimen/_10sdp">

                                <TextView
                                        style="@style/card_font_left"
                                        android:text="Kecepatan Tertinggi" />

                                <TextView
                                        android:id="@+id/tvHasilMaxSpeed"
                                        style="@style/card_font_right"
                                        android:text="00:29:30" />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>